<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tobiahenryfinder.wakeup.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/intro" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView"
        android:layout_marginTop="32dp"
        android:text="@string/hours" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/minutesField"
        android:layout_alignBottom="@+id/minutesField"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/hoursField"
        android:layout_toRightOf="@+id/hoursField"
        android:text="@string/minutes" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="25dp"
        android:text="@string/interval" />

    <EditText
        android:id="@+id/hoursField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:width="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <EditText
        android:id="@+id/minutesField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hoursField"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginLeft="69dp"
        android:layout_marginStart="69dp"
        android:width="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <EditText
        android:id="@+id/intervalField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minutesField"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:width="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/intervalField"
        android:layout_marginTop="27dp"
        android:text="@string/annoyances" />

    <RadioButton
        android:id="@+id/vibrateRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="17dp"
        android:text="@string/Vibrations" />

    <RadioButton
        android:id="@+id/soundRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/vibrateRB"
        android:layout_alignBottom="@+id/vibrateRB"
        android:layout_alignLeft="@+id/popupsRB"
        android:layout_alignStart="@+id/popupsRB"
        android:text="@string/Sound" />

    <RadioButton
        android:id="@+id/physicalActionRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vibrateRB"
        android:layout_alignStart="@+id/vibrateRB"
        android:layout_below="@+id/vibrateRB"
        android:layout_marginTop="22dp"
        android:text="@string/Actions" />

    <RadioButton
        android:id="@+id/popupsRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/physicalActionRB"
        android:layout_alignBottom="@+id/physicalActionRB"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:text="@string/Popups" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_toEndOf="@+id/vibrateRB"
        android:layout_toRightOf="@+id/vibrateRB"
        android:text="Start" />

</RelativeLayout>
